Release 0.1.5
- Changed handling of BX .. EX extended blocks. These are
  now parsed, rather than being skipped.
Release 0.1.4
- Renamed base class PDF::Grammar::Doc -> PDF::Grammar::COS
  (Carousel Object System). After finding this blog
  http://jimpravetz.com/blog/2012/12/in-defense-of-cos/
Release 0.1.3
- Allow Zero length name '/'. Can occur in empty AcromForm fields.
- Changed AST for PostScript 'if' and 'ifelse'. Now returns a 'cond' node.
- Added :strict option to PDF::Grammar::Content::Actions. Will cause parser
  to abort whith an error when unrecognised content is encountered.

Release 0.1.2
- Optimized hex string parsing. Hex codes in names must have 2-digits
- Avoid shape errors in xref sections, when actual entries and
  object count don't match (let PDF::Reader detect and handle this).
- Regen META6.json via mi6.

Release 0.1.1
- PDF::Grammar::Doc::Actions now produces compact uint64 shaped indexes
- Change PDF::Grammar :AST-Types from a Set to an Enum.
- Allow whitespace between trailer dict and 'startxref'

Release 0.1.0
- Changed xref entries AST from a hash to a uint32 @array[3]

Release 0.0.8
- Renamed tokens char_delimiter -> char-delimiter, literal_delimiter -> literal-delimiter
- remove custom PDF::Grammar.parsefile method. Not needed in latest rakudo

Release 0.0.7
- Optimized stream and image tokens
- Added PDF::Grammar::Content::Fast. A faster, more forgiving
  alternative to PDF::Grammar::Content

Release 0.0.6
- Make META.info version consistent with PDF::Grammar:ver<...>
- Declare "perl6" : "6" in META.info
- new <xref-first> rule. A variation of <xref> that assumes we've
  hopped over the first few bytes. Needed by PDF::Reader to (gulp)
  handle the /T offset entry in linearization dictionary.
- minor optimisations to <ws> and <name> rules
- replaced a couple of regex with rules/tokens
- <xref-section> - allow zero <xref-entry>'s
  As observed in some real-world PDF's

Release 0.0.5
- Replaced JSON::Tiny with JSON::Fast