@@ -1,12 +1,13 @@
 Release 0.1.5
 - Changed handling of BX .. EX extended blocks. These are
   now parsed, rather than being skipped.
+- Fixed PDF::Grammar::Content 'SCN' and 'scn' operators.
 Release 0.1.4
 - Renamed base class PDF::Grammar::Doc -> PDF::Grammar::COS
   (Carousel Object System). After finding this blog
   http://jimpravetz.com/blog/2012/12/in-defense-of-cos/
 Release 0.1.3
-- Allow Zero length name '/'. Can occur in empty AcromForm fields.
+- Allow Zero length name '/'. Can occur in empty AcroForm fields.
 - Changed AST for PostScript 'if' and 'ifelse'. Now returns a 'cond' node.
 - Added :strict option to PDF::Grammar::Content::Actions. Will cause parser
   to abort whith an error when unrecognised content is encountered.
